added ProductAPI DbContext
Added:
- ConnectionString
- DbContext
- Product Model
- Migrations

--- a/Transauto.Services.ProductAPI/appsettings.json
+++ b/Transauto.Services.ProductAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProductsAPIConnection": "Server=.;Database=TransautoProductAPI;Trusted_Connection=True;MultipleActiveResultSets=True"
+  }
 }
